# contact_graspnet_ros

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_container.sh  package.xml  run_container (copy).sh  run_container.py  run_container.sh
launch/: container.launch  grasp_server.launch
msg/: Grasps.msg
src/: client_grasp_request.py  grasp_plotter.py  grasp_server.py  test.py
srv/: GetGrasps.srv
