<?xml version="1.0"?>
<package format="2">
  <name>cgn_ros</name>
  <version>1.0.0</version>
  <description>Contact graspnet ROS service.</description>
  <maintainer email="d.nak@rutgers.edu">Daniel Nakhimovich</maintainer>
  <license>BSD</license>
  <author>Daniel Nakhimovich</author>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>.
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>gpd_ros</build_depend>
  <exec_depend>gpd_ros</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
